add cli interface to download_genomes.py

--- a/corner_config.conf
+++ b/corner_config.conf
@@ -1,5 +1,8 @@
+# Run-dependent paths
 WORKDIR='/mnt/1.5_drive_0/16S_scrubbling/archaea'
 ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/16S_scrubbling/archaea/assembly_UIDs_archaea.txt'
+GENOMES_GBK_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
+LOGS_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
 
 # Dependencies
 SEQKIT='seqkit'
