add cl interface for following scripts:
1. assign_genome_categories.py
2. get_taxIDs.py
3. add_taxonomy_names.py

--- a/corner_config.conf
+++ b/corner_config.conf
@@ -2,10 +2,10 @@
 WORKDIR='/mnt/1.5_drive_0/16S_scrubbling/archaea'
 ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/16S_scrubbling/archaea/assembly_UIDs_archaea.txt'
 GENOMES_GBK_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
-LOGS_DIR='/mnt/1.5_drive_0/16S_scrubbling/archaea/logs'
 
 # Dependencies
 SEQKIT='/home/cager/Misc_soft/seqkit'
+RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/16S_scrubbling/taxonomy/new_taxdump/rankedlineage.dmp'
 CMSEARCH_FOR_COLLECT_16S='/home/cager/Misc_soft/infernal/infernal-1.1.1/bin/cmsearch'
 RFAM_FOR_COLLECT_16S='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF01959.12.0.cm'
 
