add cl interface to find_repeats.py

--- a/corner_config.conf
+++ b/corner_config.conf
@@ -2,6 +2,7 @@
 WORKDIR='/mnt/1.5_drive_0/16S_scrubbling/archaea'
 ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/16S_scrubbling/archaea/assembly_UIDs_archaea.txt'
 GENOMES_GBK_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
+CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/16S_scrubbling/explore-16S-rRNA/conserved_regions.fasta'
 
 # Dependencies
 SEQKIT='/home/cager/Misc_soft/seqkit'
