--- a/corner_config.conf
+++ b/corner_config.conf
@@ -12,4 +12,5 @@ RFAM_FOR_COLLECT_16S='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF01959.12.0.cm'
 CMSCAN_FOR_PIVOTAL_GENES='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmscan'
 CMPRESS_FOR_PIVOTAL_GENES='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmpress'
 RFAM_FOR_PIVOTAL_GENES='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF01959.14.6.cm'
+MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 
