--- a/db_creation_and_filtering/bacteria_config.conf
+++ b/db_creation_and_filtering/bacteria_config.conf
@@ -12,8 +12,8 @@ SEQKIT='/home/cager/Misc_soft/seqkit'
 RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/16S_scrubbling/taxonomy/new_taxdump/rankedlineage.dmp'
 CMSEARCH_FOR_COLLECT_16S='/home/cager/Misc_soft/infernal/infernal-1.1.1/bin/cmsearch'
 RFAM_FOR_COLLECT_16S='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.12.0.cm'
-CMSCAN_FOR_PIVOTAL_GENES='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmscan'
-CMPRESS_FOR_PIVOTAL_GENES='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmpress'
-RFAM_FOR_PIVOTAL_GENES='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.14.6.cm'
+CMSCAN_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmscan'
+CMPRESS_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmpress'
+RFAM_FOR_FILTERING='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.14.6.cm'
 MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 
