Changes are following:
1. update bacteria_config.conf and archaea_config.conf
2. return conserved regions search to find_aberrant_genes.py
3. peed up gene_seqs_2_stats.py
3. merge_bases_categories_taxonomy.py: update columns

--- a/db_creation_and_filtering/archaea_config.conf
+++ b/db_creation_and_filtering/archaea_config.conf
@@ -14,6 +14,8 @@ CMSEARCH_FOR_COLLECT_16S='/home/cager/Misc_soft/infernal/infernal-1.1.1/bin/cmse
 RFAM_FOR_COLLECT_16S='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF01959.12.0.cm'
 CMSCAN_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmscan'
 CMPRESS_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmpress'
-CMPRESS_FOR_FILTERING='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF01959.14.6.cm'
+RFAM_FOR_FILTERING='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF01959.14.6.cm'
 MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 
+# Misc
+FIND_CONSERV_REGIONS=0
