--- a/db_creation_and_filtering/bacteria_config.conf
+++ b/db_creation_and_filtering/bacteria_config.conf
@@ -3,7 +3,7 @@ PREFIX='bacteria'
 
 # Run-dependent paths
 WORKDIR='/mnt/1.5_drive_0/16S_scrubbling/bacteria'
-ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/16S_scrubbling/assembly_UIDs.txt'
+ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/16S_scrubbling/bacteria/assembly_UIDs.txt'
 GENOMES_GBK_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
 CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/16S_scrubbling/explore-16S-rRNA/db_creation_and_filtering/conserved_regions.fasta'
 
@@ -17,3 +17,5 @@ CMPRESS_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmpress
 RFAM_FOR_FILTERING='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.14.6.cm'
 MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 
+# Misc
+FIND_CONSERV_REGIONS=1
