--- a/db_creation_and_filtering/config/bacteria_config.conf
+++ b/db_creation_and_filtering/config/bacteria_config.conf
@@ -22,7 +22,7 @@ SEQKIT='/home/cager/Misc_soft/seqkit'
 
 # NCBI Taxonomy
 # File `rankedlineage.dmp` from https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump
-RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/16S_scrubbling/taxonomy/new_taxdump/rankedlineage.dmp'
+RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/16S_scrubbling/new_taxdump/rankedlineage.dmp'
 
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
 # Here, we should use cmsearcn 1.1.1 and Rfam 12.0, to be fully consistent wuth PGAP
@@ -39,7 +39,7 @@ CMPRESS_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmpress
 RFAM_FOR_FILTERING='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.14.6.cm'
 
 # The program cmfetch to extract specific Rfam model from from whole Rfam file
-CMFETCH='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmfetch
+CMFETCH='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmfetch'
 
 # ID of bacterial ribosomal RNA SSU family in Rfam
 RFAM_FAMILY_ID='RF00177'
