update README and config files

--- a/db_creation_and_filtering/config/bacteria_example.conf
+++ b/db_creation_and_filtering/config/bacteria_example.conf
@@ -4,11 +4,11 @@ PREFIX='bacteria'
 # == Input data ==
 
 # File of Assembly IDs (one per line).
-ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/16S_scrubbling/bacteria/assembly_UIDs.txt'
+ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/RiboGrove_workdirs/3.209/bacteria/assembly_IDs.txt'
 
 # == Working directory ==
 # Directory for output and temporary files
-WORKDIR='/mnt/1.5_drive_0/16S_scrubbling/bacteria'
+WORKDIR='/mnt/1.5_drive_0/RiboGrove_workdirs/3.209/bacteria'
 
 # == Downloaded genomes ==
 # Directory for `.gbk.gz` files of downloaded genomes.
@@ -22,13 +22,16 @@ SEQKIT='/home/cager/Misc_soft/seqkit'
 
 # NCBI Taxonomy
 # File `rankedlineage.dmp` from https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump
-RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/16S_scrubbling/new_taxdump/rankedlineage.dmp'
+RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/RiboGrove_workdirs/new_taxdump/rankedlineage.dmp'
+
+# RefSeq Catalog_file
+REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove_workdirs/3.209/RefSeq-release209_filtered.catalog.gz'
 
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
 # Here, we should use cmsearcn 1.1.1 and Rfam 12.0, to be fully consistent wuth PGAP
 # They are used by the script `extract_16S.py`
 CMSEARCH_FOR_EXTRACT_16S='/home/cager/Misc_soft/infernal/infernal-1.1.1/bin/cmsearch'
-RFAM_FOR_EXTRACT_16S='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.12.0.cm'
+RFAM_FOR_EXTRACT_16S='/mnt/1.5_drive_0/16S_scrubbling/rfam/Rfam_12.0.cm'
 
 # cmscan and cmpress programs and Rfam .cm file used to filter of 16S rRNA genes.
 # We prefer to use the latest versions of all programs and Rfam families for this purpose:
@@ -36,7 +39,7 @@ RFAM_FOR_EXTRACT_16S='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.12.0.cm'
 # They are used by the script `compare_all_seqs_to_cm.py`
 CMSCAN_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmscan'
 CMPRESS_FOR_FILTERING='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmpress'
-RFAM_FOR_FILTERING='/mnt/1.5_drive_0/16S_scrubbling/rfam/RF00177.14.6.cm'
+RFAM_FOR_FILTERING='/mnt/1.5_drive_0/16S_scrubbling/rfam/Rfam_14.6.cm'
 
 # The program cmfetch to extract specific Rfam model from from whole Rfam file
 CMFETCH='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmfetch'
@@ -50,9 +53,14 @@ MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 # == Conserved regions ==
 
 # Fasta file of the 16S rDNA conserved regions
-CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/16S_scrubbling/explore-16S-rRNA/db_creation_and_filtering/conserved_regions.fasta'
+CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/16S_scrubbling/ribogrove-paper/db_creation_and_filtering/conserved_regions.fasta'
 
 # This flag influences behaviour of the pipeline
 # 1 -- check the 16S rDNA conserved regions while finding aberrant genes
 # 0 -- do not check the conserved regions; detect aberrant genes only by deletions instead
 CHECK_CONSERV_REGIONS=1
+
+
+# == "Cached" files from previous releases ==
+
+PREV_TBLOUT_FILE='/mnt/1.5_drive_0/16S_scrubbling/bacteria/aberrations_and_heterogeneity/cmscan_output_table.tblout'
