update READMEs and add some new ones
fix a bug in compare_all_seqs_to_cm.py

update demo

fix typos in templates

--- a/db_creation_and_filtering/config/archaea_example.conf
+++ b/db_creation_and_filtering/config/archaea_example.conf
@@ -4,28 +4,29 @@ PREFIX='archaea'
 # == Input data ==
 
 # File of Assembly IDs (one per line).
-ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/RiboGrove_workdirs/3.209/archaea/assembly_IDs.txt'
-
-# == Working directory ==
-# Directory for output and temporary files
-WORKDIR='/mnt/1.5_drive_0/RiboGrove_workdirs/3.209/archaea/'
+ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/RiboGrove_workdirs/7.213/archaea/assembly_IDs.txt'
 
 # == Downloaded genomes ==
 # Directory for `.gbk.gz` files of downloaded genomes.
 GENOMES_GBK_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
-
-
-# == Dependencies ==
-
-# Seqkit
-SEQKIT='/home/cager/Misc_soft/seqkit'
 
 # NCBI Taxonomy
 # File `rankedlineage.dmp` from https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump
 RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/RiboGrove_workdirs/new_taxdump/rankedlineage.dmp'
 
 # RefSeq Catalog_file
-REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove_workdirs/3.209/RefSeq-release209_filtered.catalog.gz'
+REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove_workdirs/7.213/RefSeq-release213.catalog.gz'
+
+
+# == Working directory ==
+# Directory for output and temporary files
+WORKDIR='/mnt/1.5_drive_0/RiboGrove_workdirs/7.213/archaea'
+
+
+# == Dependencies ==
+
+# Seqkit
+SEQKIT='/home/cager/Misc_soft/seqkit'
 
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
 # Here, we should use cmsearcn 1.1.1 and Rfam 12.0, to be fully consistent wuth PGAP
@@ -53,7 +54,7 @@ MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 # == Conserved regions ==
 
 # Fasta file of the 16S rDNA conserved regions
-CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/16S_scrubbling/ribogrove-paper/db_creation_and_filtering/conserved_regions.fasta'
+CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/repos/ribogrove-tools/db_creation_and_filtering/conserved_regions.fasta'
 
 # This flag influences behaviour of the pipeline
 # 1 -- check the 16S rDNA conserved regions while finding aberrant genes
@@ -63,4 +64,4 @@ CHECK_CONSERV_REGIONS=0
 
 # == "Cached" files from previous releases ==
 
-PREV_TBLOUT_FILE='/mnt/1.5_drive_0/16S_scrubbling/archaea/aberrations_and_heterogeneity/cmscan_output_table.tblout'
+PREV_TBLOUT_FILE='/mnt/1.5_drive_0/RiboGrove_workdirs/6.212/archaea/aberrations_and_heterogeneity/cmscan_output_table.tblout'
