add prev-cache to assign_genome_categories.py

--- a/demo/demo.conf
+++ b/demo/demo.conf
@@ -63,4 +63,4 @@ CHECK_CONSERV_REGIONS=1
 
 # == "Cached" files from previous releases ==
 
-# PREV_TBLOUT_FILE='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/6.212/bacteria/aberrations_and_heterogeneity/cmscan_output_table.tblout'
+# PREV_WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/6.212/bacteria'
