--- a/db_creation_and_filtering/config/archaea_example.conf
+++ b/db_creation_and_filtering/config/archaea_example.conf
@@ -64,4 +64,4 @@ CHECK_CONSERV_REGIONS=0
 
 # == "Cached" files from previous releases ==
 
-PREV_TBLOUT_FILE='/mnt/1.5_drive_0/RiboGrove_workdirs/6.212/archaea/aberrations_and_heterogeneity/cmscan_output_table.tblout'
+PREV_WORKDIR='/mnt/1.5_drive_0/RiboGrove_workdirs/6.212/archaea'
