--- a/db_creation_and_filtering/config/bacteria_example.conf
+++ b/db_creation_and_filtering/config/bacteria_example.conf
@@ -51,6 +51,10 @@ RFAM_FAMILY_ID='RF00177'
 # MUSCLE program for multiple sequence alignment
 MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 
+# MFEprimer executable for calculation of primer annealing coverage
+# You may assign an empty string to the variable MFEPRIMER, if your variable CALC_PRIMERS_COVERAGE is 0
+MFEPRIMER='/home/cager/Misc_soft/mfeprimer'
+
 # == Conserved regions ==
 
 # Fasta file of the 16S rDNA conserved regions
@@ -60,6 +64,13 @@ CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/repos/ribogrove-tools/db_creation_and_
 # 1 -- check the 16S rDNA conserved regions while finding aberrant genes
 # 0 -- do not check the conserved regions; detect aberrant genes only by deletions instead
 CHECK_CONSERV_REGIONS=1
+
+# == Primer coverage calculation ==
+
+# This flag influences behaviour of the pipeline
+# 1 -- calculate primer annealing coverage with MFEprimer
+# 0 -- do not calculate primer annealing coverage
+CALC_PRIMERS_COVERAGE=1
 
 
 # == "Cached" files from previous releases ==
