--- a/db_creation_and_filtering/config/archaea_example.conf
+++ b/db_creation_and_filtering/config/archaea_example.conf
@@ -6,16 +6,16 @@ PREFIX='archaea'
 # File of Assembly IDs (one per line).
 ASSEMBLY_IDS_FPATH='/mnt/1.5_drive_0/RiboGrove_workdirs/7.213/archaea/assembly_IDs.txt'
 
-# == Downloaded genomes ==
-# Directory for `.gbk.gz` files of downloaded genomes.
-GENOMES_GBK_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
-
 # NCBI Taxonomy
 # File `rankedlineage.dmp` from https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump
 RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/RiboGrove_workdirs/new_taxdump/rankedlineage.dmp'
 
 # RefSeq Catalog_file
 REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove_workdirs/7.213/RefSeq-release213.catalog.gz'
+
+# == Downloaded genomes ==
+# Directory for `.gbk.gz` files of downloaded genomes.
+GENOMES_GBK_DIR='/mnt/1.5_drive_0/16S_scrubbling/genomes-data/gbk'
 
 
 # == Working directory ==
@@ -51,6 +51,10 @@ RFAM_FAMILY_ID='RF01959'
 # MUSCLE program for multiple sequence alignment
 MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 
+# MFEprimer executable for calculation of primer annealing coverage
+# You may assign an empty string to the variable MFEPRIMER, if your variable CALC_PRIMERS_COVERAGE is 0
+MFEPRIMER=''
+
 # == Conserved regions ==
 
 # Fasta file of the 16S rDNA conserved regions
@@ -60,6 +64,13 @@ CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/repos/ribogrove-tools/db_creation_and_
 # 1 -- check the 16S rDNA conserved regions while finding aberrant genes
 # 0 -- do not check the conserved regions; detect aberrant genes only by deletions instead
 CHECK_CONSERV_REGIONS=0
+
+# == Primer coverage calculation ==
+
+# This flag influences behaviour of the pipeline
+# 1 -- calculate primer annealing coverage with MFEprimer
+# 0 -- do not calculate primer annealing coverage
+CALC_PRIMERS_COVERAGE=0
 
 
 # == "Cached" files from previous releases ==
