--- a/demo/demo.conf
+++ b/demo/demo.conf
@@ -28,7 +28,7 @@ SEQKIT='/home/cager/Misc_soft/seqkit'
 
 
 # RefSeq Catalog_file
-REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/8.214/RefSeq-release214.catalog.gz'
+REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/9.215/RefSeq-release215.catalog.gz'
 
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
 # Here, we should use cmsearcn 1.1.1 and Rfam 12.0, to be fully consistent wuth PGAP
@@ -53,6 +53,10 @@ RFAM_FAMILY_ID='RF00177'
 # MUSCLE program for multiple sequence alignment
 MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 
+# MFEprimer executable for calculation of primer annealing coverage
+# You may assign an empty string to the variable MFEPRIMER, if your variable CALC_PRIMERS_COVERAGE is 0
+MFEPRIMER='/home/cager/Misc_soft/mfeprimer'
+
 # == Conserved regions ==
 
 # Fasta file of the 16S rDNA conserved regions
@@ -63,7 +67,14 @@ CONSERVED_REGIONS_FASTA='/mnt/1.5_drive_0/repos/ribogrove-tools/db_creation_and_
 # 0 -- do not check the conserved regions; detect aberrant genes only by deletions instead
 CHECK_CONSERV_REGIONS=1
 
+# == Primer coverage calculation ==
+
+# This flag influences behaviour of the pipeline
+# 1 -- calculate primer annealing coverage with MFEprimer
+# 0 -- do not calculate primer annealing coverage
+CALC_PRIMERS_COVERAGE=1
+
 
 # == "Cached" files from previous releases ==
 
-# PREV_WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/6.212/bacteria'
+# PREV_WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/9.215/bacteria'
