--- a/create_RiboGrove/collect_and_filter/config/archaea_example.conf
+++ b/create_RiboGrove/collect_and_filter/config/archaea_example.conf
@@ -1,5 +1,5 @@
 # Domain name -- one of 'bacteria', 'archaea'. Must be lowercase.
-DOMAIN='bacteria'
+DOMAIN='archaea'
 
 # == Input data ==
 
@@ -12,12 +12,12 @@ REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/10.216/RefSeq
 
 # == Downloaded genomes ==
 # Directory for `.gbff.gz` files of downloaded genomes.
-GENOMES_GBK_DIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/bacteria/genomes_data/genomes'
+GENOMES_GBK_DIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/archaea/genomes_data/genomes'
 
 
 # == Working directory ==
 # Directory for output and temporary files
-WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/demo_bacteria'
+WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/demo_archaea'
 
 
 # == Dependencies ==
@@ -45,8 +45,8 @@ RFAM_FOR_FILTERING='/mnt/1.5_drive_0/RiboGrove/RiboGrove_misc/rfam/Rfam_14.9.cm'
 # The program cmfetch to extract specific Rfam model from from whole Rfam file
 CMFETCH='/home/cager/Misc_soft/infernal/infernal-1.1.4/bin/cmfetch'
 
-# ID of bacterial ribosomal RNA SSU family in Rfam
-RFAM_FAMILY_ID='RF00177'
+# ID of archaeal ribosomal RNA SSU family in Rfam
+RFAM_FAMILY_ID='RF01959'
 
 # MUSCLE program for multiple sequence alignment
 MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
@@ -65,4 +65,4 @@ CALC_PRIMERS_COVERAGE=1
 
 # == "Cached" files from previous releases ==
 
-# PREV_WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/6.212/bacteria'
+# PREV_WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/6.212/archaea'
