--- a/create_RiboGrove/collect_and_filter/demo/demo.conf
+++ b/create_RiboGrove/collect_and_filter/demo/demo.conf
@@ -50,9 +50,9 @@ MFEPRIMER='/home/cager/Misc_soft/mfeprimer'
 # == Primer coverage calculation ==
 
 # This flag influences behaviour of the pipeline
-# 1 -- calculate primer annealing coverage with MFEprimer
-# 0 -- do not calculate primer annealing coverage
-CALC_PRIMERS_COVERAGE=1
+# true  -- calculate primer annealing coverage with MFEprimer
+# false -- do not calculate primer annealing coverage
+CALC_PRIMERS_COVERAGE=true
 
 
 # == "Cached" files from previous releases ==
