update READMEs again

--- a/create_RiboGrove/collect_and_filter/config/bacteria_example.conf
+++ b/create_RiboGrove/collect_and_filter/config/bacteria_example.conf
@@ -20,6 +20,24 @@ GENOMES_GBK_DIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/bacteria/gen
 WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/demo_bacteria_2'
 
 
+# == Thresholds ==
+
+# Gene sequences having deletions longer than REPEAT_LEN_THRESHOLD
+#   (compared to corresponding pivotal gene) will be discarded.
+DELETION_LEN_THRESHOLD=10
+
+# Gene sequences having internal repeats longer than REPEAT_LEN_THRESHOLD will be discarded.
+REPEAT_LEN_THRESHOLD=25
+
+
+# == Primer coverage calculation ==
+
+# This flag influences behaviour of the pipeline
+# true -- calculate primer annealing coverage with MFEprimer
+# false -- do not calculate primer annealing coverage
+CALC_PRIMERS_COVERAGE=true
+
+
 # == Dependencies ==
 
 # Seqkit
@@ -46,13 +64,6 @@ MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
 # MFEprimer executable for calculation of primer annealing coverage
 # You may assign an empty string to the variable MFEPRIMER, if your variable CALC_PRIMERS_COVERAGE is false
 MFEPRIMER='/home/cager/Misc_soft/mfeprimer'
-
-# == Primer coverage calculation ==
-
-# This flag influences behaviour of the pipeline
-# true -- calculate primer annealing coverage with MFEprimer
-# false -- do not calculate primer annealing coverage
-CALC_PRIMERS_COVERAGE=true
 
 
 # == "Cached" files from previous releases ==
