--- a/create_RiboGrove/collect_and_filter/config/bacteria_example.conf
+++ b/create_RiboGrove/collect_and_filter/config/bacteria_example.conf
@@ -12,12 +12,12 @@ REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/10.216/RefSeq
 
 # == Downloaded genomes ==
 # Directory for `.gbff.gz` files of downloaded genomes.
-GENOMES_GBK_DIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/bacteria/genomes_data/genomes'
+GENOMES_GBK_DIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_misc/genomes-data/refseq_gbff/'
 
 
 # == Working directory ==
 # Directory for output and temporary files
-WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST/demo_bacteria_2'
+WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST3/archaea'
 
 
 # == Thresholds ==
@@ -45,6 +45,7 @@ SEQKIT='/home/cager/Misc_soft/seqkit'
 
 # Ribotyper
 RIBOTYPER='/mnt/1.5_drive_0/Soft/Ribovore/ribovore/ribotyper'
+RIBOTYPER_THREADS=6
 
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
 # Here, we should use cmsearcn 1.1.1 and Rfam 12.0, to be fully consistent wuth PGAP
