--- a/create_RiboGrove/collect_and_filter/config/archaea_example.conf
+++ b/create_RiboGrove/collect_and_filter/config/archaea_example.conf
@@ -5,26 +5,26 @@ DOMAIN='archaea'
 
 # NCBI Taxonomy
 # File `rankedlineage.dmp` from https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump
-RANKEDLINEAGE_FPATH='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/new_taxdump/rankedlineage.dmp'
+RANKEDLINEAGE_FPATH='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/new_taxdump/rankedlineage.dmp'
 
 # RefSeq Catalog_file
-REFSEQ_CATALOG_FILE='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/11.217/RefSeq-release217.catalog.gz'
+REFSEQ_CATALOG_FILE='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/RefSeq-release226.catalog.gz'
 
 # == Downloaded genomes ==
 # Directory for `.gbff.gz` files of downloaded genomes.
-GENOMES_GBK_DIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_misc/genomes-data/refseq_gbff/'
+GENOMES_GBK_DIR='/mnt/data/Max/RiboGrove/RiboGrove_misc/genomes-data/refseq_gbff'
 
 
 # == Working directory ==
 # Directory for output and temporary files
-WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/TEST3/archaea'
+WORKDIR='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/archaea'
 
 
 # == Thresholds ==
 
 # Gene sequences having deletions longer than DELETION_LEN_THRESHOLD
 #   (compared to corresponding pivotal gene) will be discarded
-DELETION_LEN_THRESHOLD=10
+DELETION_LEN_THRESHOLD=15
 
 # Gene sequences having internal repeats longer than REPEAT_LEN_THRESHOLD will be discarded
 REPEAT_LEN_THRESHOLD=25
@@ -44,29 +44,24 @@ CALC_PRIMERS_COVERAGE=false
 SEQKIT='/home/cager/Misc_soft/seqkit'
 
 # Ribotyper
-RIBOTYPER='/mnt/1.5_drive_0/Soft/Ribovore/ribovore/ribotyper'
+RIBOTYPER='/mnt/data/Max/Soft/Ribovore/ribovore/ribotyper'
 RIBOTYPER_THREADS=1
 
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
-# Here, we should use cmsearcn 1.1.1 and Rfam 12.0, to be fully consistent wuth PGAP
+# Here, we should use cmsearch 1.1.5 and Rfam 14.4, to be fully consistent wuth PGAP
 # They are used by the script `extract_16S.py`
-CMSEARCH_FOR_EXTRACT_16S='/home/cager/Misc_soft/infernal/infernal-1.1.1/bin/cmsearch'
-RFAM_FOR_EXTRACT_16S='/mnt/1.5_drive_0/RiboGrove/RiboGrove_misc/rfam/Rfam_12.0.cm'
+CMSEARCH_FOR_EXTRACT_16S='/home/cager/Misc_soft/infernal/infernal-1.1.5/bin/cmsearch'
+RFAM_FAMILY_FOR_EXTRACT_16S='/mnt/data/Max/RiboGrove/RiboGrove_misc/rfam/Rfam_14.4/RF01959.cm'
 
-# The program cmfetch to extract specific Rfam model from from whole Rfam file
-CMFETCH='/home/cager/Misc_soft/infernal/infernal-1.1.1/bin/cmfetch'
-
-# ID of archaeal ribosomal RNA SSU family in Rfam
-RFAM_FAMILY_ID='RF01959'
-
-# MUSCLE program for multiple sequence alignment
-MUSCLE='/home/cager/Misc_soft/muscle3.8.31'
+# MAFFT program for multiple sequence alignment
+MAFFT='/home/cager/Misc_soft/mafft-linux64/mafft.bat'
 
 # MFEprimer executable for calculation of primer annealing coverage
 # You may assign an empty string to the variable MFEPRIMER, if your variable CALC_PRIMERS_COVERAGE is false
-MFEPRIMER='/home/cager/Misc_soft/mfeprimer'
+MFEPRIMER='/home/cager/Misc_soft/mfeprimer_v3.3.1'
+MFEPRIMER_TMP_DIR='/tmp/mfetmp'
 
 
 # == "Cached" files from previous releases ==
 
-# PREV_WORKDIR='/mnt/1.5_drive_0/RiboGrove/RiboGrove_workdirs/6.212/archaea'
+PREV_WORKDIR='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/19.225/archaea'
