--- a/create_RiboGrove/collect_and_filter/config/archaea_example.conf
+++ b/create_RiboGrove/collect_and_filter/config/archaea_example.conf
@@ -5,10 +5,10 @@ DOMAIN='archaea'
 
 # NCBI Taxonomy
 # File `rankedlineage.dmp` from https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump
-RANKEDLINEAGE_FPATH='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/new_taxdump/rankedlineage.dmp'
+RANKEDLINEAGE_FPATH='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/21.227/new_taxdump/rankedlineage.dmp'
 
 # RefSeq Catalog_file
-REFSEQ_CATALOG_FILE='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/RefSeq-release226.catalog.gz'
+REFSEQ_CATALOG_FILE='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/21.227/RefSeq-release227.catalog.gz'
 
 # == Downloaded genomes ==
 # Directory for `.gbff.gz` files of downloaded genomes.
@@ -17,7 +17,7 @@ GENOMES_GBK_DIR='/mnt/data/Max/RiboGrove/RiboGrove_misc/genomes-data/refseq_gbff
 
 # == Working directory ==
 # Directory for output and temporary files
-WORKDIR='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/archaea'
+WORKDIR='/mnt/data/Max/tmp/TEST_RiboGrove/archaea'
 
 
 # == Thresholds ==
@@ -35,13 +35,13 @@ REPEAT_LEN_THRESHOLD=25
 # This flag influences behaviour of the pipeline
 # true -- calculate primer annealing coverage with MFEprimer
 # false -- do not calculate primer annealing coverage
-CALC_PRIMERS_COVERAGE=false
+CALC_PRIMERS_COVERAGE=true
 
 
 # == Dependencies ==
 
 # Seqkit
-SEQKIT='/home/cager/Misc_soft/seqkit'
+SEQKIT='/home/cager-max/Soft/seqkit'
 
 # Ribotyper
 RIBOTYPER='/mnt/data/Max/Soft/Ribovore/ribovore/ribotyper'
@@ -50,18 +50,18 @@ RIBOTYPER_THREADS=1
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
 # Here, we should use cmsearch 1.1.5 and Rfam 14.4, to be fully consistent wuth PGAP
 # They are used by the script `extract_16S.py`
-CMSEARCH_FOR_EXTRACT_16S='/home/cager/Misc_soft/infernal/infernal-1.1.5/bin/cmsearch'
+CMSEARCH_FOR_EXTRACT_16S='/home/cager-max/Soft/infernal/infernal-1.1.5/bin/cmsearch'
 RFAM_FAMILY_FOR_EXTRACT_16S='/mnt/data/Max/RiboGrove/RiboGrove_misc/rfam/Rfam_14.4/RF01959.cm'
 
 # MAFFT program for multiple sequence alignment
-MAFFT='/home/cager/Misc_soft/mafft-linux64/mafft.bat'
+MAFFT='/home/cager-max/Soft/mafft-linux64/mafft.bat'
 
 # MFEprimer executable for calculation of primer annealing coverage
 # You may assign an empty string to the variable MFEPRIMER, if your variable CALC_PRIMERS_COVERAGE is false
-MFEPRIMER='/home/cager/Misc_soft/mfeprimer_v3.3.1'
+MFEPRIMER='/home/cager-max/Soft/mfeprimer_v3.3.1'
 MFEPRIMER_TMP_DIR='/tmp/mfetmp'
 
 
 # == "Cached" files from previous releases ==
 
-PREV_WORKDIR='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/19.225/archaea'
+# PREV_WORKDIR='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/archaea'
