--- a/create_RiboGrove/collect_and_filter/config/bacteria_example.conf
+++ b/create_RiboGrove/collect_and_filter/config/bacteria_example.conf
@@ -1,23 +1,23 @@
-# Domain name -- one of 'archaea', 'bacteria'. Must be lowercase.
+# Domain name -- one of 'bacteria', 'archaea'. Must be lowercase.
 DOMAIN='bacteria'
 
 # == Input data ==
 
 # NCBI Taxonomy
 # File `rankedlineage.dmp` from https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump
-RANKEDLINEAGE_FPATH='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/21.227/new_taxdump/rankedlineage.dmp'
+RANKEDLINEAGE_FPATH='/mnt/cager-beast/m.2.2/RiboGrove/RiboGrove_workdirs/new_taxdump/rankedlineage.dmp'
 
 # RefSeq Catalog_file
-REFSEQ_CATALOG_FILE='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/21.227/RefSeq-release227.catalog.gz'
+REFSEQ_CATALOG_FILE='/mnt/cager-beast/m.2.2/RiboGrove/RiboGrove_workdirs/22.228/RefSeq-release228.catalog.gz'
 
 # == Downloaded genomes ==
 # Directory for `.gbff.gz` files of downloaded genomes.
-GENOMES_GBK_DIR='/mnt/data/Max/RiboGrove/RiboGrove_misc/genomes-data/refseq_gbff'
+GENOMES_GBK_DIR='/mnt/cager-beast/m.2.2/RiboGrove/genomes_data/refseq_gbff'
 
 
 # == Working directory ==
 # Directory for output and temporary files
-WORKDIR='/mnt/data/Max/tmp/TEST_RiboGrove/bacteria'
+WORKDIR='/mnt/cager-beast/m.2.2/RiboGrove/RiboGrove_workdirs/22.228/bacteria'
 
 
 # == Thresholds ==
@@ -41,27 +41,28 @@ CALC_PRIMERS_COVERAGE=true
 # == Dependencies ==
 
 # Seqkit
-SEQKIT='/home/cager-max/Soft/seqkit'
+SEQKIT='/home/cager-beast/Soft/seqkit'
 
 # Ribotyper
-RIBOTYPER='/mnt/data/Max/Soft/Ribovore/ribovore/ribotyper'
-RIBOTYPER_THREADS=6
+RIBOTYPER='/home/cager-beast/Soft/Ribovore/ribovore/ribotyper'
+RIBOTYPER_THREADS=64
 
 # cmsearch program and Rfam covariance model for extraction of 16S rRNA genes from genomic sequences.
 # Here, we should use cmsearch 1.1.5 and Rfam 14.4, to be fully consistent wuth PGAP
 # They are used by the script `extract_16S.py`
-CMSEARCH_FOR_EXTRACT_16S='/home/cager-max/Soft/infernal/infernal-1.1.5/bin/cmsearch'
-RFAM_FAMILY_FOR_EXTRACT_16S='/mnt/data/Max/RiboGrove/RiboGrove_misc/rfam/Rfam_14.4/RF00177.cm'
+CMSEARCH_FOR_EXTRACT_16S='/home/cager-beast/Soft/infernal-1.1.5/bin/cmsearch'
+RFAM_FAMILY_FOR_EXTRACT_16S='/mnt/cager-beast/m.2.2/RiboGrove/Rfam/14.4/RF00177.cm'
 
 # MAFFT program for multiple sequence alignment
-MAFFT='/home/cager-max/Soft/mafft-linux64/mafft.bat'
+MAFFT='/usr/bin/mafft'
 
 # MFEprimer executable for calculation of primer annealing coverage
 # You may assign an empty string to the variable MFEPRIMER, if your variable CALC_PRIMERS_COVERAGE is false
-MFEPRIMER='/home/cager-max/Soft/mfeprimer_v3.3.1'
-MFEPRIMER_TMP_DIR='/tmp/mfetmp'
+MFEPRIMER='/home/cager-beast/Soft/mfeprimer-3.3.1-linux-amd64'
+MFEPRIMER_TMP_DIR='/mnt/cager-beast/m.2.2/tmp/mfetmp'
+MFEPRIMER_THREADS='64'
 
 
 # == "Cached" files from previous releases ==
 
-# PREV_WORKDIR='/mnt/data/Max/RiboGrove/RiboGrove_workdirs/20.226/bacteria'
+PREV_WORKDIR='/mnt/cager-beast/m.2.2/RiboGrove/RiboGrove_workdirs/21.227/bacteria'
